--- a/src/mastermind2/MyJFrame.form
+++ b/src/mastermind2/MyJFrame.form
@@ -94,11 +94,10 @@
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="joinButton" min="-2" max="-2" attributes="0"/>
                                   <Component id="autoModeCheckbox" min="-2" max="-2" attributes="0"/>
                                   <Component id="nameLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="nameTextField" alignment="0" min="-2" pref="189" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
@@ -114,6 +113,7 @@
                                           <Component id="portTextField" min="-2" pref="69" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
+                                  <Component id="nameTextField" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace pref="71" max="32767" attributes="0"/>
                           </Group>
@@ -249,22 +249,21 @@
                           <Component id="hostButton" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                           <Component id="tryCountLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="tryCountSpiner" min="-2" pref="72" max="-2" attributes="0"/>
-                          <Component id="jTextField4" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Component id="colorCountSpinner" min="-2" pref="73" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="colorCountRandomCheckbox" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="codeLengthLabel" max="32767" attributes="0"/>
-                                  <Component id="codeLengthSpinner" max="32767" attributes="0"/>
+                          <Component id="colorCountLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="colorCountSpinner" max="32767" attributes="0"/>
+                                  <Component id="codeLengthLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="codeLengthSpinner" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="codeLengthRandomCheckbox" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="colorCountRandomCheckbox" min="-2" max="-2" attributes="0"/>
+                                  <Component id="codeLengthRandomCheckbox" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <Component id="colorCountLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="tryCountSpiner" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
+                          <Component id="jTextField4" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="103" max="32767" attributes="0"/>
                   </Group>
@@ -301,7 +300,7 @@
                       <Component id="newWindowHostCheckbox" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Component id="hostButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="26" max="32767" attributes="0"/>
+                      <EmptySpace pref="23" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -312,7 +311,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Codel&#xe4;nge"/>
+                <Property name="text" type="java.lang.String" value="Code length"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JSpinner" name="codeLengthSpinner">
@@ -333,7 +332,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Farbanzahl"/>
+                <Property name="text" type="java.lang.String" value="Colors"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JSpinner" name="colorCountSpinner">
@@ -355,7 +354,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="11" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Zuf&#xe4;llig"/>
+                <Property name="text" type="java.lang.String" value="Random"/>
               </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="codeLengthRandomCheckboxStateChanged"/>
@@ -366,7 +365,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="11" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Zuf&#xe4;llig"/>
+                <Property name="text" type="java.lang.String" value="Random"/>
               </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="colorCountRandomCheckboxStateChanged"/>
@@ -377,7 +376,14 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="11" style="0"/>
                 </Property>
+                <Property name="horizontalAlignment" type="int" value="11"/>
                 <Property name="text" type="java.lang.String" value="50004"/>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[41, 22]"/>
+                </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[41, 22]"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
@@ -393,13 +399,19 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Versuche (0 = unendlich)"/>
+                <Property name="text" type="java.lang.String" value="Attempts (0 = unlimited)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JSpinner" name="tryCountSpiner">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="11" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
                   <SpinnerModel initial="0" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
+                </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[41, 22]"/>
                 </Property>
               </Properties>
             </Component>
